# NuM487KM_GCC

./: CMakeLists.txt  DEBUG.md  Makefile  README.md  freertos.cmake  m480bsp.cmake
Core/: main.c
Device_Startup/: gcc_arm.ld
Middleware/dhrystone2/: dhry_1.c  dhry_2.c
UnitTest/: test_01_sysnow.c  test_01_uart.c
